--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <div class="container header-container">
         <nav class="nav">
             <a href="./index.html" class="logo link">Web<span class="logo-style">Studio</span></a>
@@ -29,7 +30,7 @@
             </ul>
         </address>
     </div>
-    </header>
+    </header> -->
     <main>
         <section class="hero">
             <div class="container hero-container">
@@ -236,7 +237,7 @@
           </ul>
           </div>
         </section>
-       <section class="customers">
+       <!-- <section class="customers">
         <div class="customers-container container">
             <h2 class="customers-title">Customers</h2>
             <ul class="customers-list list">
@@ -284,9 +285,9 @@
                 </li>
             </ul>
         </div>
-       </section>
+       </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container footer-container">
             <div class="footer-logo-paragraph">
             <a href="./index.html" class="footer-link link">Web<span class="logo-style-bottom">Studio</span></a>
@@ -343,7 +344,7 @@
             </form>
           </div>
         </div>
-    </footer>
+    </footer> -->
     
     <div class="backdrop is-hidden" data-modal>
         <div class="modal-window">
