--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           </ul>
           </div>
         </section>
-       <!-- <section class="customers">
+       <section class="customers">
         <div class="customers-container container">
             <h2 class="customers-title">Customers</h2>
             <ul class="customers-list list">
@@ -285,9 +285,9 @@
                 </li>
             </ul>
         </div>
-       </section> -->
+       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container footer-container">
             <div class="footer-logo-paragraph">
             <a href="./index.html" class="footer-link link">Web<span class="logo-style-bottom">Studio</span></a>
@@ -344,7 +344,7 @@
             </form>
           </div>
         </div>
-    </footer> -->
+    </footer>
     
     <div class="backdrop is-hidden" data-modal>
         <div class="modal-window">
