fixed footer, mob-version done, tablet done
have to fix desktop portfolio page and add retina pictures

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
-    <!-- <header class="header">
+    <header class="header">
         <div class="container header-container">
         <nav class="nav">
             <a href="./index.html" class="logo link">Web<span class="logo-style">Studio</span></a>
@@ -29,8 +29,72 @@
                 <li><a href="tel:+110001111111"  class="address-link link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+
+        <button class="hamburger-btn js-open-menu" type="button">
+            <svg class="hamburger-icon" width="32" height="22">
+              <use href="./images/icons.svg#icon-menu-hamburger"></use>
+            </svg>
+          </button>
     </div>
-    </header> -->
+
+    <!-- mobile menu -->
+    <div class="mob-menu js-menu-container">
+        <div class="mob-menu-content">
+            <button type="button" class="modal-close menu-close-btn js-close-menu">
+                <svg class="modal-close-icon" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-black"></use>
+                </svg>
+            </button>
+            <nav class="mob-nav">
+                <ul class="list mob-nav-list">
+                    <li class="mob-nav-item">
+                        <a href="./index.html" class="mob-nav-link current-page link ">Studio</a>
+                    </li>
+                    <li class="mob-menu-item">
+                        <a href="./portfolio.html" class="mob-nav-link link">Portfolio</a>
+                    </li>
+                    <li class="mob-menu-item">
+                        <a href="" class="mob-nav-link link">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="mob-address">
+                <ul class="mob-address-list list">
+                    <li><a href="tel:+110001111111"  class="mob-tel-link link">+11 (000) 111-11-11</a></li>
+                    <li><a href="mailto:info@devstudio.com"  class="mob-mail-link link">info@devstudio.com</a></li>
+                </ul>
+            </address>
+            <ul class="mob-soc-list list">
+                <li class="mob-soc-item">
+                    <a href="" class="mob-soc-link link" target="_blank"
+                    rel="noopener noreferrer">
+                <svg class="mob-soc-icon" width="24" height="24"><use href="./images/icons.svg#icon-instagram"></use></svg>
+                </a>
+            </li>
+                <li class="mob-soc-item">
+                    <a href="" class="mob-soc-link link" target="_blank"
+                    rel="noopener noreferrer"> 
+                <svg class="mob-soc-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use></svg>
+                </a>
+            </li>
+                <li class="mob-soc-item">
+                    <a href="" class="mob-soc-link link" target="_blank" rel="noopener noreferrer">
+                    <svg class="mob-soc-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+                <li class="mob-soc-item"><a href="" class="mob-soc-link link" target="_blank" rel="noopener noreferrer">
+                    <svg class="mob-soc-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+            </ul>
+        </div>
+    </div>
+    </header>
     <main>
         <section class="hero">
             <div class="container hero-container">
@@ -284,7 +348,9 @@
                     </a>
                 </li>
             </ul>
+
         </div>
+        
        </section>
     </main>
     <footer class="footer">
@@ -423,5 +489,6 @@
     </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/modal-menu.js"></script>
 </body>
 </html>
