--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
     <header class="header">
@@ -17,8 +18,8 @@
         <nav class="nav">
             <a href="./index.html" class="logo link">Web<span class="logo-style">Studio</span></a>
             <ul class="main-nav-list list">
-                <li><a href="./index.html" class="nav-link link">Studio</a></li>
-                <li><a href="./portfolio.html"  class="nav-link link current-page">Portfolio</a></li>
+                <li><a href="./index.html" class="nav-link link ">Studio</a></li>
+                <li><a href="./portfolio.html"  class="nav-link current-page link">Portfolio</a></li>
                 <li><a href=""  class="nav-link link">Contacts</a></li>
             </ul>
         </nav>
@@ -28,6 +29,70 @@
                 <li><a href="tel:+110001111111"  class="address-link link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+
+        <button class="hamburger-btn js-open-menu" type="button">
+            <svg class="hamburger-icon" width="32" height="22">
+              <use href="./images/icons.svg#icon-menu-hamburger"></use>
+            </svg>
+          </button>
+    </div>
+
+    <!-- mobile menu -->
+    <div class="mob-menu js-menu-container">
+        <div class="mob-menu-content">
+            <button type="button" class="modal-close menu-close-btn js-close-menu">
+                <svg class="modal-close-icon" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-black"></use>
+                </svg>
+            </button>
+            <nav class="mob-nav">
+                <ul class="list mob-nav-list">
+                    <li class="mob-nav-item">
+                        <a href="./index.html" class="mob-nav-link link ">Studio</a>
+                    </li>
+                    <li class="mob-menu-item">
+                        <a href="./portfolio.html" class="mob-nav-link current-page  link">Portfolio</a>
+                    </li>
+                    <li class="mob-menu-item">
+                        <a href="" class="mob-nav-link link">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="mob-address">
+                <ul class="mob-address-list list">
+                    <li><a href="tel:+110001111111"  class="mob-tel-link link">+11 (000) 111-11-11</a></li>
+                    <li><a href="mailto:info@devstudio.com"  class="mob-mail-link link">info@devstudio.com</a></li>
+                </ul>
+            </address>
+            <ul class="mob-soc-list list">
+                <li class="mob-soc-item">
+                    <a href="" class="mob-soc-link link" target="_blank"
+                    rel="noopener noreferrer">
+                <svg class="mob-soc-icon" width="24" height="24"><use href="./images/icons.svg#icon-instagram"></use></svg>
+                </a>
+            </li>
+                <li class="mob-soc-item">
+                    <a href="" class="mob-soc-link link" target="_blank"
+                    rel="noopener noreferrer"> 
+                <svg class="mob-soc-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use></svg>
+                </a>
+            </li>
+                <li class="mob-soc-item">
+                    <a href="" class="mob-soc-link link" target="_blank" rel="noopener noreferrer">
+                    <svg class="mob-soc-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+                <li class="mob-soc-item"><a href="" class="mob-soc-link link" target="_blank" rel="noopener noreferrer">
+                    <svg class="mob-soc-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+            </ul>
+        </div>
     </div>
     </header>
     <main>
@@ -226,5 +291,6 @@
           </div>
         </div>
     </footer>
+    <script src="./js/modal-menu.js"></script>
 </body>
 </html>
