--- a/portfolio.html
+++ b/portfolio.html
@@ -112,7 +112,8 @@
                 <li class="portfolio-cards-item">
                     <a href="" class="portfolio-link link">
                         <div class="portfolio-wrap">
-                        <img src="./images/bank.jpg" alt="Banking app" width="360" height="300">
+                        <img srcset="./images/bank.jpg 1x, ./images/bank-x2.jpg 2x" 
+                        src="./images/bank.jpg" alt="Banking app" width="360" height="300">
                         <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
                         <div class="portfolio-card-container">
@@ -127,7 +128,8 @@
                 <li class="portfolio-cards-item" >
                     <a href="" class="portfolio-link link">
                         <div class="portfolio-wrap">
-                        <img src="./images/cashless.jpg" alt="QR scanning" width="360" height="300">
+                        <img srcset="./images/cashless.jpg 1x, ./images/cashless-x2.jpg 2x" 
+                        src="./images/cashless.jpg" alt="QR scanning" width="360" height="300">
                         <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
                         <div class="portfolio-card-container">
@@ -141,7 +143,8 @@
                 <li class="portfolio-cards-item" >
                     <a href="" class="portfolio-link link">
                         <div class="portfolio-wrap">
-                        <img src="./images/meditation.jpg" alt="Meditation app" width="360" height="300">
+                        <img srcset="./images/meditation.jpg 1x, ./images/meditation-x2.jpg 2x" 
+                        src="./images/meditation.jpg" alt="Meditation app" width="360" height="300">
                         <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
                         <div class="portfolio-card-container">
@@ -154,7 +157,8 @@
                 <li class="portfolio-cards-item" >
                     <a href="" class="portfolio-link link">
                         <div class="portfolio-wrap">
-                        <img src="./images/taxi.jpg" alt="Taxi driver" width="360" height="300">
+                        <img srcset="./images/taxi.jpg 1x, ./images/taxi-x2.jpg 2x" 
+                        src="./images/taxi.jpg" alt="Taxi driver" width="360" height="300">
                         <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
                         <div class="portfolio-card-container">
@@ -167,7 +171,8 @@
                 <li class="portfolio-cards-item" >
                     <a href="" class="portfolio-link link">
                         <div class="portfolio-wrap">
-                        <img src="./images/illustrations.jpg" alt="Screen phone" width="360" height="300">
+                        <img srcset="./images/illustrations.jpg 1x, ./images/illustrations-x2.jpg 2x" 
+                        src="./images/illustrations.jpg" alt="Screen phone" width="360" height="300">
                         <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
                         <div class="portfolio-card-container">
@@ -180,7 +185,8 @@
                 <li class="portfolio-cards-item" >
                     <a href="" class="portfolio-link link">
                         <div class="portfolio-wrap">
-                        <img src="./images/courses.jpg" alt="Lady comunicate online" width="360" height="300">
+                        <img srcset="./images/courses.jpg 1x, ./images/courses-x2.jpg 2x" 
+                        src="./images/courses.jpg" alt="Lady comunicate online" width="360" height="300">
                         <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
                         <div class="portfolio-card-container">
@@ -193,7 +199,8 @@
                 <li class="portfolio-cards-item" >
                     <a href="" class="portfolio-link link">
                         <div class="portfolio-wrap">
-                        <img src="./images/stories.jpg" alt="Stories templates" width="360" height="300">
+                        <img srcset="./images/stories.jpg 1x, ./images/stories-x2.jpg 2x" 
+                        src="./images/stories.jpg" alt="Stories templates" width="360" height="300">
                         <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
                         <div class="portfolio-card-container">
@@ -206,7 +213,8 @@
                 <li class="portfolio-cards-item">
                     <a href="" class="portfolio-link link">
                         <div class="portfolio-wrap">
-                        <img src="./images/organic-food.jpg" alt="Lady carry shopping bag" width="360" height="300">
+                        <img srcset="./images/organic-food.jpg 1x, ./images/organic-food-x2.jpg 2x" 
+                        src="./images/organic-food.jpg" alt="Lady carry shopping bag" width="360" height="300">
                         <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
                         <div class="portfolio-card-container">
@@ -219,7 +227,8 @@
                 <li class="portfolio-cards-item" >
                     <a href="" class="portfolio-link link">
                         <div class="portfolio-wrap">
-                        <img src="./images/coffee.jpg" alt="Barista on duty" width="360" height="300">
+                        <img srcset="./images/coffee.jpg 1x, ./images/coffee-x2.jpg 2x" 
+                        src="./images/coffee.jpg" alt="Barista on duty" width="360" height="300">
                         <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
                         <div class="portfolio-card-container">
