--- a/index.html
+++ b/index.html
@@ -151,11 +151,14 @@
             <div class="container">
             <h2 class="projects-intro-title">What are we doing</h2>
             <ul class="projects-intro-list list">
-                <li class="projects-intro-item"><img src="./images/rectangle.jpg" alt="computer" width="360" 
+                <li class="projects-intro-item"><img srcset="./images/rectangle.jpg 1x, ./images/rectangle-x2.jpg 2x"
+                     src="./images/rectangle.jpg" alt="computer" width="360" 
                     height="300"></li>
-                <li class="projects-intro-item"><img src="./images/app.jpg" alt="application" width="360" 
+                <li class="projects-intro-item"><img srcset="./images/app.jpg 1x, ./images/app-x2.jpg 2x"
+                     src="./images/app.jpg" alt="application" width="360" 
                     height="300"></li>
-                <li class="projects-intro-item"><img src="./images/mobile.jpg" alt="phone" width="360" 
+                <li class="projects-intro-item"><img srcset="./images/mobile.jpg 1x, ./images/mobile-x2.jpg 2x"
+                     src="./images/mobile.jpg" alt="phone" width="360" 
                     height="300"></li>
             </ul>
             </div>
@@ -166,7 +169,8 @@
 
           <ul class="team-list list">
             <li class="team-item">
-                <img src="./images/img-3.jpg" alt="Mark" width="264" height="260">
+                <img srcset="./images/img-3.jpg 1x, ./images/img-3-x2.jpg 2x" 
+                src="./images/img-3.jpg" alt="Mark" width="264" height="260">
                 <div class="team-container">
                 <h3 class="team-item-title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
@@ -199,7 +203,8 @@
             </div>
             </li>
             <li class="team-item">
-                <img src="./images/img-2.jpg" alt="Tom" width="264" height="260">
+                <img srcset="./images/img-2.jpg 1x, ./images/img-2-x2.jpg 2x" 
+                src="./images/img-2.jpg" alt="Tom" width="264" height="260">
                 <div class="team-container">
                 <h3 class="team-item-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
@@ -231,7 +236,8 @@
             </div>
             </li>
             <li class="team-item">
-                <img src="./images/img-1.jpg" alt="Camila" width="264" height="260">
+                <img srcset="./images/img-1.jpg 1x, ./images/img-1-x2.jpg 2x" 
+                src="./images/img-1.jpg" alt="Camila" width="264" height="260">
                 <div class="team-container">
                 <h3 class="team-item-title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
@@ -264,7 +270,8 @@
             </div>
             </li>
             <li class="team-item">
-                <img src="./images/img.jpg" alt="Daniel" width="264" height="260">
+                <img srcset="./images/img.jpg 1x, ./images/img-x2.jpg 2x" 
+                src="./images/img.jpg" alt="Daniel" width="264" height="260">
                 <div class="team-container">
                 <h3 class="team-item-title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
