--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </section>
     
         <section class="preferences">
-            <div class="container">
+            <div class="container preferences-container">
             <h2 class="visually-hidden">Our preferences</h2>
             <ul class="preferences-list list">
                 <li class="preferences-item">
