--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </button>
             <nav class="mob-nav">
                 <ul class="list mob-nav-list">
-                    <li class="mob-nav-item">
+                    <li class="mob-menu-item">
                         <a href="./index.html" class="mob-nav-link current-page link ">Studio</a>
                     </li>
                     <li class="mob-menu-item">
