--- a/index.html
+++ b/index.html
@@ -359,6 +359,10 @@
         </div>
         
        </section>
+       <button onclick="topFunction()" id="myBtn" title="Go to top">
+    <svg class="scroll-up-btn" width="25" height="25">
+        <use href="./images/icons.svg#icon-circle-up"></use>
+    </svg></button>
     </main>
     <footer class="footer">
         <div class="container footer-container">
@@ -497,5 +501,6 @@
     </div>
     <script src="./js/modal.js"></script>
     <script src="./js/modal-menu.js"></script>
+    <script src="./js/btn-up.js"></script>
 </body>
 </html>
