--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         
        </section>
        <button onclick="topFunction()" id="myBtn" title="Go to top">
-    <svg class="scroll-up-btn" width="25" height="25">
+    <svg class="scroll-up-btn">
         <use href="./images/icons.svg#icon-circle-up"></use>
     </svg></button>
     </main>
