--- a/index.html
+++ b/index.html
@@ -359,9 +359,9 @@
         </div>
         
        </section>
-       <button onclick="topFunction()" id="myBtn" title="Go to top">
-    <svg class="scroll-up-btn">
-        <use href="./images/icons.svg#icon-circle-up"></use>
+       <button class="btn-up btn-hidden">
+        <svg class="scroll-up-btn" width="30" height="30">
+        <use href="./images/icons.svg#icon-cirkle-up"></use>
     </svg></button>
     </main>
     <footer class="footer">
