--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
        </section>
        <button class="btn-up btn-hidden">
         <svg class="scroll-up-btn" width="30" height="30">
-        <use href="./images/icons.svg#icon-cirkle-up"></use>
+        <use href="./images/icons.svg#icon-circle-up"></use>
     </svg></button>
     </main>
     <footer class="footer">
