--- a/portfolio.html
+++ b/portfolio.html
@@ -241,6 +241,11 @@
             </ul>
         </div>
         </section>
+        <button class="btn-up btn-hidden">
+            <svg class="scroll-up-btn" width="30" height="30">
+            <use href="./images/icons.svg#icon-circle-up"></use>
+            </svg>
+        </button>
     </main>
     <footer class="footer">
         <div class="container footer-container">
@@ -301,5 +306,6 @@
         </div>
     </footer>
     <script src="./js/modal-menu.js"></script>
+    <script src="./js/btn-up.js"></script>
 </body>
 </html>
